<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/login_card_margin_horizontal"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    tools:context="com.example.micaelleal.projetoboletimescolar.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/login_padding_horizontal"
        android:paddingVertical="@dimen/login_padding_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
        android:text="@string/text_cadastro_titulo"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_cadastrar_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/edit_cadastrar_nome"  />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_cadastrar_escola"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/edit_cadastrar_escola"  />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_cadastrar_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:hint="@string/edit_cadastrar_e_mail"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_cadastrar_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="15"
                android:hint="@string/edit_cadastrar_senha"  />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_cadastrar_confirma_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="15"
                android:hint="@string/edit_cadastrar_confirmar_senha"  />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:onClick="cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/btn_cadastro_cadastrar"/>

    </LinearLayout>

</android.support.v7.widget.CardView>