<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="@dimen/login_card_margin_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    tools:context="com.example.micaelleal.projetoboletimescolar.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/login_padding_horizontal"
        android:paddingVertical="@dimen/login_padding_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            android:text="@string/text_login_titulo"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:inputType="textEmailAddress"
                android:hint="@string/edit_login_usuario_hint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_login_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:inputType="textPassword"
                android:hint="@string/edit_login_senha_hint"  />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_entrar"
            android:onClick="solicitarLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textColor="@color/white"
            android:text="@string/btn_login_entrar"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_login_no_account"/>

            <TextView
                android:onClick="trocaLayoutParaCadastro"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="4dp"
                android:text="@string/text_login_cadastrar"/>

        </LinearLayout>


    </LinearLayout>



</android.support.v7.widget.CardView>
