<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.micaelleal.projetoboletimescolar.DisciplinaActivity">

    <TextView
        android:id="@+id/text_disciplina_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_margin="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_disciplina_professor"/>

        <TextView
            android:id="@+id/text_disciplina_professor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="260dp"
                android:layout_height="30dp"
                android:layout_gravity="end">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="@string/text_disciplina_m_de_media"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="0.5"
                    android:layout_marginRight="8dp"
                    android:src="@mipmap/ic_launcher_right"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="@string/text_disciplina_p_de_pontos"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="@string/text_disciplina_n1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="@string/text_disciplina_n2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="@string/text_disciplina_r_de_recuperacao"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_bimestre_disciplina"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:layout_height="30dp">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="4dp"
                    android:background="@color/red"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:text="@string/text_disciplina_abaixo_da_media_escolar"/>

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="4dp"
                    android:background="@color/yellow"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:text="@string/text_disciplina_abaixo_da_media_pessoal"/>

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="4dp"
                    android:background="@color/blue"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:text="@string/text_disciplina_partir_da_media_pessoal"/>

            </LinearLayout>

            <TextView
                android:id="@+id/medial_final"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_disciplina_situacao"/>

            <TextView
                android:id="@+id/text_diciplina_situacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/text_disciplina_recuperacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textStyle="bold"
                android:hint="@string/text_disciplina_recuperaco_final"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
